--- a/index.html
+++ b/index.html
@@ -1,31 +1,51 @@
 <html>
-  <head>
-    <title>Curse</title>
-    <meta content="">
-    <link rel="icon" type="image/png" href="./icon.png" />
-    <style>
-        body, html {
-            height:100%;
-            padding: 0px;
-            margin: 0px;
-            overflow: hidden;
-            background-color: #fff;
-        }
-        div.wrap{
-            height: 100%;
-            overflow: hidden;
-            background-color: #fff;
-        }
-    </style>
+	<head>
 
-  </head>
+	<title>Curse</title>
+	<meta content="">
+	<link rel="icon" type="image/png" href="./icon.png" />
+	<style>
 
-  <body>
-    <script type="text/javascript">
-      console.log("Loading up the webframe.");
-    </script>
-    <div class=wrap>
-      <webview id="curse-webview" src="https://www.curse.com/login" allowpopups style="overflow: hidden; width:100%; height:100%;"></webview>
-    </div>
-  </body>
+		body, html {
+			height:100%;
+			padding: 0px;
+			margin: 0px;
+			overflow: hidden;
+			background-color: #fff;
+		}
+
+		div.wrap{
+			height: 100%;
+			overflow: hidden;
+			background-color: #fff;
+		}
+
+	</style>
+
+ 	</head>
+
+ 	<body>
+
+	<script type="text/javascript">
+
+		console.log("Loading up the webframe.");
+
+		document.addEventListener("keydown", function (e) {
+			if (e.which === 116) {
+				location.reload();
+			}
+		});
+
+		document.on('click', 'a[href^="http"]', function(event) {
+			event.preventDefault();
+			require('shell').openExternal(this.href);
+		});
+
+	</script>
+
+	<div class=wrap>
+		<webview id="curse-webview" src="https://www.curse.com/home" allowpopups style="overflow: hidden; width:100%; height:100%;"></webview>
+	</div>
+
+	</body>
 </html>
